RESOLVED FIXED259302
REGRESSION (265781@main): Horizontal scrolls on an overflow scroll can trigger history swipe sometimes
https://bugs.webkit.org/show_bug.cgi?id=259302
Summary REGRESSION (265781@main): Horizontal scrolls on an overflow scroll can trigge...
Simon Fraser (smfr)
Reported 2023-07-17 21:17:47 PDT
Horizontally scrolling an overflow:scroll with some ancestor which has a passive wheel event listener can trigger history swipes.
Attachments
Simon Fraser (smfr)
Comment 1 2023-07-17 21:18:02 PDT
Simon Fraser (smfr)
Comment 2 2023-07-17 21:22:27 PDT
EWS
Comment 3 2023-07-18 22:54:08 PDT
Committed 266154@main (20029b928380): <https://commits.webkit.org/266154@main> Reviewed commits have been landed. Closing PR #15902 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.