Cherry-pick 20029b928380. rdar://problem/112440237

REGRESSION (265781@main): Horizontal scrolls on an overflow scroll can trigger history swipe sometimes
    https://bugs.webkit.org/show_bug.cgi?id=259302
    rdar://112440237

    Reviewed by Tim Horton.

    265781@main delayed the call to wheelEventHandlingCompleted*() in WebPageProxy::handleWheelEventReply(),
    handing off the event to the scrolling thread for async, post-webcontent processing. However, it also
    dropped on the floor the `wasHandledForScrolling || wasHandledByWebProcess` argument, which is what
    tells ViewGestureController to not do history swipe. So carry that state along through the
    async RemoteScrollingCoordinatorProxyMac processing.

    Also improve the swipe logging.

    Tested by these tests:
        swipe/swipe-back-with-active-wheel-listener-and-scroller.html
        swipe/swipe-back-with-passive-wheel-listener-and-scroller.html
        swipe/wheel-prevent-default-prevents-swipe-back.html
    which now pass with UI-side compositing enabled.

    * Source/WebKit/UIProcess/RemoteLayerTree/RemoteScrollingCoordinatorProxy.h:
    (WebKit::RemoteScrollingCoordinatorProxy::wheelEventHandlingCompleted):
    * Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteLayerTreeEventDispatcher.cpp:
    (WebKit::RemoteLayerTreeEventDispatcher::wheelEventHandlingCompleted):
    * Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteLayerTreeEventDispatcher.h:
    * Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteScrollingCoordinatorProxyMac.h:
    * Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteScrollingCoordinatorProxyMac.mm:
    (WebKit::RemoteScrollingCoordinatorProxyMac::wheelEventHandlingCompleted):
    * Source/WebKit/UIProcess/ViewGestureController.cpp:
    (WebKit::ViewGestureController::PendingSwipeTracker::stateToString const):
    (WebKit::ViewGestureController::PendingSwipeTracker::handleEvent):
    (WebKit::ViewGestureController::PendingSwipeTracker::eventWasNotHandledByWebCore):
    (WebKit::ViewGestureController::PendingSwipeTracker::tryToStartSwipe):
    (WebKit::ViewGestureController::PendingSwipeTracker::reset):
    * Source/WebKit/UIProcess/ViewGestureController.h:
    * Source/WebKit/UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::handleWheelEventReply):

    Canonical link: https://commits.webkit.org/266154@main

Identifier: 265870.200@safari-7616-branch